--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -267,13 +267,13 @@ body { background-color: #fff; padding: 20px; }
 	#myQuiz .progress div::after { top: -30px; width: 53px; height: 33px;}
 	#myQuiz .intro {width: 300px; top: 135px; left:330px;}
 
-	#myQuiz .question {width: 300px; top:135px; left: 330px;}
-	#myQuiz .question .txt {font-size: 1.4em; margin-bottom: :15px;}
-	#myQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom:10px;}
+	#myQuiz .question {width: 300px; top: 135px; left: 330px;}
+	#myQuiz .question .txt {font-size: 1.2em; margin-bottom: 15px;}
+	#myQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px;}
 	#myQuiz .question .ans.image{min-height: 45px; background-size: auto 45px;}
-	#myQuiz .question .ans.image:hover{background-color: #000};
+	#myQuiz .question .ans.image:hover{background-color: #000;}
 
-	#myQuiz .results {width: 300px; top: 135px; left:330px;}
+	#myQuiz .results { width: 260px; top: 150px; left:330px;}
 	#myQuiz .results .share {margin-top: 20px;}
 	#myQuiz .results a.btn {margin-bottom: 20px;}
 
