--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
-body { background-color: #fff; padding: 20px; }
+body { 
+	background: #000 url(../images/lobster_logo.jpg) 0px 0px;
+	padding: 20px; 
+}
 
 #myQuiz {
    font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400;
