--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,8 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
 body { 
-	background: #000 url(../images/lobster_logo.jpg) 0px 0px;
-	padding: 20px; 
+	background-color: #1c1c1c;
+    background-image: url(https://www.redlobster.com/assets/images/back.png);
+    background-position: top left;
+    background-repeat: repeat-x;
+    background-attachment: fixed;
+	padding: 10px; 
 }
 
 #myQuiz {
@@ -203,6 +207,10 @@ body {
 	margin-top: 5px;
 }
 
+#myQuiz .results .btn {
+	margin-top: 20px;
+}
+
 #myQuiz .feedback strong {
 	color: #fff;
 	
@@ -243,6 +251,10 @@ body {
 #myQuiz .results .share a.btn.twitter {
 	background-color: #59adeb;
 	background-image: url(../images/icon_twitter.svg)	
+}
+#myQuiz .results .share a.btn.facebook {
+	background-color: #44619d;
+	background-image: url(../images/fb.png)	
 }
 
 #myQuiz .active, #myQuiz .inactive {
