--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -18,6 +18,9 @@ body {
    background: #000 url(../images/background_rl.jpg) no-repeat 0px 0px;
    margin-right: auto;
    margin-left: auto;
+   -webkit-box-shadow: 19px 22px 19px 0px rgba(0,0,0,0.77);
+   -moz-box-shadow: 19px 22px 19px 0px rgba(0,0,0,0.77);
+	box-shadow: 19px 22px 19px 0px rgba(0,0,0,0.77);
 }
 
 #myQuiz h1 {
@@ -68,16 +71,17 @@ body {
 #myQuiz .progress {
 	width: 550px;
 	position: absolute;
-	top: 160px;
+	top: 145px;
 	left: 40px;
 }
 
 #myQuiz .progress div {
 	position: relative;
 	display: inline-block;
-	width:30px;
+	width: 30px;
 	height: 30px;
-	margin-right: 30px;
+	margin-right: 25px;
+	margin-top: 5px;
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, .2);
 	transition: background-color 1s;
@@ -278,7 +282,7 @@ body {
 	#myQuiz h3 {font-size: 2.2em; margin-bottom: 15px;}
 
 	#myQuiz .progress {width: 300px; top: 80px; left: 25px;}
-	#myQuiz .progress div {width: 20px; height: 20px; margin-right: 20px;}
+	#myQuiz .progress div {width: 20px; height: 20px; margin-right: 10px;}
 	#myQuiz .progress div::after { top: -30px; width: 40px; height: 28px;}
 	#myQuiz .intro {width: 300px; top: 135px; left:330px;}
 
@@ -290,7 +294,8 @@ body {
 
 	#myQuiz .results { width: 260px; top: 150px; left:330px;}
 	#myQuiz .results .share {margin-top: 20px;}
-	#myQuiz .results a.btn {margin-bottom: 20px;}
+	#myQuiz .results .btn {margin-top: 10px;}
+	#myQuiz .results a.btn {margin-bottom: 10px;}
 
 	#myQuiz .active { left: 25px;}
 	#myQuiz .intro.inactive, #myQuiz .inactive.answered {left: -650px;}
