--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -32,12 +32,17 @@ body {
 	top: 25px;
 	left: 36px;
 }
+#myQuiz h1.homepage {
+	font-size: 2.5em;
+	font-weight: 500;
+	position: relative;
+}
 
 #myQuiz h1 span {
 	display: block;
 	font-weight: 900;
 	font-family: 'Titillium Web', sans-serif;
-	font-size: 3.2em;
+	font-size: 2.5em;
 	line-height: 65px;
 }
 
@@ -45,6 +50,13 @@ body {
 	font-size: 3em;
 	margin: 0px;
 	font-weight: 100;
+}
+
+#myQuiz h2.homepage {
+	font-size: 2em;
+	margin: 25px 0px;
+	font-weight: 100;
+	position: relative;
 }
 
 #myQuiz h3 {
