--- a/public/views/selectquiz.html
+++ b/public/views/selectquiz.html
@@ -1,6 +1,12 @@
 <h1 class="homepage">Test Your Knowledge</h1>
-<h2 class="homepage"> Please select your quiz</h2>
+
+<div class="select-quiz">
+
+
+<h4> Please select a quiz</h2>
 	
 
-<a ng-href="#/quiz" class="btn" ng-click="selectQuiz('lobsterfest')">Lobsterfest Quiz</a>
-<a ng-href="#/quiz" class="btn" ng-click="selectQuiz('bar')">Bar Quiz</a>
+<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('Lobsterfest')">Lobsterfest Quiz</a>
+<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('Bar')">Bar Quiz</a>
+
+</div>
