Refactored httpget request

--- a/public/views/selectquiz.html
+++ b/public/views/selectquiz.html
@@ -6,7 +6,7 @@
 <h4> Please select a quiz</h2>
 	
 
-<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('Lobsterfest')">Lobsterfest Quiz</a>
-<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('Bar')">Bar Quiz</a>
+<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('lobsterfest')">Lobsterfest Quiz</a>
+<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('bar')">Bar Quiz</a>
 
 </div>
