Fixed getting error issue

--- a/public/views/quiz.html
+++ b/public/views/quiz.html
@@ -1,4 +1,4 @@
-		<h1>Test Your Knowledge: <span>{{quiz}}</span></h1>
+		<h1>Test Your Knowledge: <span>{{quizName}}</span></h1>
 			<div class="progress">
 
 				<div class="{{($index === activeQuestion)? 'on' : 'off'}} 
