Wrote api for getting questions from a database.  Created front end calls to retrieve questions as json list

--- a/public/views/quiz.html
+++ b/public/views/quiz.html
@@ -8,7 +8,7 @@
 			</div>
 			<div class="intro {{(activeQuestion >-1) ? 'inactive' : 'active' }}">
 				<h2>Welcome</h2>
-				<p>Click begin to test your knowledge of the {{quiz}}</p>
+				<p>Click begin to test your knowledge of the {{quizName}}</p>
 				<p class="btn" ng-click="activeQuestion = 0">Begin</p>
 			</div>
 			<div class="question 
