--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -304,6 +304,7 @@ body {
 	#myQuiz h2 {margin: 0px;}
 	#myQuiz h3 {font-size: 2.2em; margin-bottom: 15px;}
 
+	#myQuiz .btn-home {margin-top:20px;}
 	#myQuiz .progress {width: 300px; top: 80px; left: 25px;}
 	#myQuiz .progress div {width: 20px; height: 20px; margin-right: 10px;}
 	#myQuiz .progress div::after { top: -30px; width: 40px; height: 28px;}
