--- a/public/views/selectquiz.html
+++ b/public/views/selectquiz.html
@@ -6,7 +6,6 @@
 <h4> Please select a quiz</h2>
 	
 
-<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('lobsterfest')">Lobsterfest Quiz</a>
-<a ng-href="#/quiz" class="btn btn-home" ng-click="selectQuiz('bar')">Bar Quiz</a>
+<a ng-repeat="quiz in quizes" ng-href="#/quiz/{{quiz.id}}/{{quiz.name}}" class="btn btn-home">{{quiz.name}} Quiz</a>
 
 </div>
