--- a/public/views/quiz.html
+++ b/public/views/quiz.html
@@ -1,3 +1,4 @@
+	<div id="myQuiz">	
 		<h1>Test Your Knowledge: <span>{{quizName}}</span></h1>
 			<div class="progress">
 
@@ -44,3 +45,4 @@
 				<a href="#/" class="btn">Back to Select Quiz page</a>
 
 			</div>
+		</div>
