--- a/public/views/quiz.html
+++ b/public/views/quiz.html
@@ -1,6 +1,6 @@
 	<div id="myQuiz">	
 		<h1>Test Your Knowledge: <span>{{quizName}}</span></h1>
-			<div class="progress">
+			<div class="progress-b">
 
 				<div class="{{($index === activeQuestion)? 'on' : 'off'}} 
 				{{(myQuestion.questionState === 'answered') ? 'answered' : 'unanswered'}} 
